# ternary-signals

./: AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PLUG_AND_PLAY.md  README.md
docs/: FUTURE-INTEGRATION.md  MIGRATION.md
memory/: JOURNAL.md
src/: lib.rs
